feat(vguide): per-loop-head invariant candidate contract (Issue #4)
Replace the location-free string predicate pipeline with the
loop-head-candidate-v1 contract: every LLM candidate must name its
loop head(s); candidates without a location are rejected with an
observable reason instead of being broadcast to all loop heads.

- LoopHeadCandidateParser: parses schema loop-head-candidate-v1
  (loop_head/loop_heads, predicate, role, variables); legacy
  {"predicates":[...]} now rejected as missing_loop_head; rejections
  carry raw fragment, label, predicate, reason, detail
- PredicateValidationPipeline.validateCandidates: L2 parse + L3 SMT
  per named head only; unknown_loop_head / head_not_on_trace /
  parse_error / contract_violation rejections observable; no implicit
  broadcast; multi-head candidates expand to one ValidatedPredicate
  per head
- ValidatedPredicate gains role + variables candidate metadata
- LlmEnsembleMerger: candidate-based merge (dedup key heads+predicate,
  budget cap); string API removed with LlmResponseParser,
  LlmProposalSanitizer, AttributedRawPredicate
- Prompt contract rewritten (was: 'Java binds predicates to all loop
  heads'); source-prior path switched to candidates with per-head
  binding
- Dumper records accepted candidate predicates under predicates_raw
- Tests: parser (10), merger (4), pipeline mapping incl. no-broadcast
  and per-head rejection isolation (7), prompt contract
- Docs: LOOP_HEAD_INVARIANT_PLAN.md (plan), UNIFIED_VGUIDE_ARCHITECTURE,
  PREDICATE_BUDGET

Verification: ant build-project, checkstyle, spotbugs green; all 73
vguide-package tests green; full JUnit 2637 tests with 10 pre-existing
native-solver crashes identical to unmodified main (environmental).